green and refactor : ArticleControllerTest,ArticleController