@@ -4,29 +4,59 @@ import static com.sprint.part3.sb01_monew_team6.entity.QNewsArticle.newsArticle;
 
 import com.querydsl.core.types.Order;
 import com.querydsl.core.types.OrderSpecifier;
+import com.sprint.part3.sb01_monew_team6.dto.PageResponse;
 import com.sprint.part3.sb01_monew_team6.dto.news.ArticleDto;
 import com.sprint.part3.sb01_monew_team6.dto.news.CursorPageRequestArticleDto;
-import com.sprint.part3.sb01_monew_team6.dto.news.CursorPageResponseArticleDto;
 import com.sprint.part3.sb01_monew_team6.entity.NewsArticle;
+import com.sprint.part3.sb01_monew_team6.exception.ErrorCode;
+import com.sprint.part3.sb01_monew_team6.exception.news.NewsException;
+import com.sprint.part3.sb01_monew_team6.mapper.PageResponseMapper;
 import com.sprint.part3.sb01_monew_team6.repository.CommentRepository;
 import com.sprint.part3.sb01_monew_team6.repository.news.NewsArticleRepository;
 import com.sprint.part3.sb01_monew_team6.service.news.ArticleService;
 import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Slice;
+import org.springframework.data.domain.SliceImpl;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class ArticleServiceImpl implements ArticleService {
   private final NewsArticleRepository newsArticleRepository;
   private final CommentRepository commentRepository;
+  private final PageResponseMapper pageResponseMapper;
 
   @Transactional(readOnly=true)
   @Override
-  public CursorPageResponseArticleDto searchArticles(CursorPageRequestArticleDto request) {
+  public PageResponse<ArticleDto> searchArticles(CursorPageRequestArticleDto request) {
+    log.debug("기사조회(searchArticles) 시작 → userId={}, keyword={}, orderBy={}, direction={}, cursor={}, after={}, limit={}",
+        request.userId(), request.keyword(), request.orderBy(), request.direction(), request.cursor(), request.after(), request.limit()
+    );
+
+    // limit 음수 방지
+    if (request.limit() <= 0) {
+      log.warn("잘못된 limit: {}", request.limit());
+      throw new NewsException(ErrorCode.NEWS_LIMIT_MORE_THAN_ONE_EXCEPTION,Instant.now(), HttpStatus.BAD_REQUEST);
+    }
+
+    // 정렬 스펙 생성
+    OrderSpecifier<?> orderSpec;
+    try {
+      orderSpec = buildOrder(request);
+    } catch (IllegalArgumentException ex) {
+      log.error("지원하지 않는 orderBy: {}", request.orderBy(), ex);
+      throw new NewsException(ErrorCode.NEWS_ORDERBY_IS_NOT_SUPPORT_EXCEPTION,Instant.now(),HttpStatus.BAD_REQUEST);
+    }
+
     // cursor : null 또는 빈 문자열이면 null 그대로
     Long cursor = Optional.ofNullable(request.cursor())
         .filter(s -> !s.isBlank())
@@ -36,43 +66,40 @@ public class ArticleServiceImpl implements ArticleService {
     // after : 이미 Instant 타입
     Instant after = request.after();
 
-    // 정렬 스펙 생성
-    OrderSpecifier<?> orderSpec = buildOrder(request);
+    List<NewsArticle> entities;
+    long total;
+    try {
+      entities = newsArticleRepository.searchArticles(request, orderSpec, cursor, after, request.limit());
+      total = newsArticleRepository.countArticles(request);
+    } catch (Exception ex) {
+      log.error("NewsArticleRepository 호출 중 예외", ex);
+      throw new NewsException(ErrorCode.NEWS_CALL_NEWSARTICLEREPOSITORY_EXCEPTION,Instant.now(),HttpStatus.INTERNAL_SERVER_ERROR);
+    }
 
-    // 실제 페이징 조회
-    List<NewsArticle> newsArticles = newsArticleRepository.searchArticles(
-        request, orderSpec, cursor, after, request.limit()
-    );
-    long totalElements = newsArticleRepository.countArticles(request);
-
-    // DTO 변환
-    List<ArticleDto> content = newsArticles.stream()
+    // Entity → DTO 변환
+    List<ArticleDto> dtos = entities.stream()
         .map(a -> ArticleDto.from(
             a,
             commentRepository.countByArticleId(a.getId()),
             0L,
             false
         ))
-        .toList();
+        .collect(Collectors.toList());
 
-    // 페이징 정보 계산
-    boolean hasNext = content.size() == request.limit();
-    String nextCursor = hasNext
-        ? String.valueOf(content.get(content.size() - 1).id())
-        : null;
-    Instant nextAfter = hasNext
-        ? content.get(content.size() - 1).publishDate()
-        : null;
+    // Slice 생성
+    boolean hasNext = dtos.size() == request.limit();
+    PageRequest pgReq = PageRequest.of(0, request.limit());
+    Slice<ArticleDto> slice = new SliceImpl<>(dtos, pgReq, hasNext);
+
+    // nextCursor / nextAfter 결정
+    Object nextCursor = hasNext ? dtos.get(dtos.size() - 1).id() : null;
+    Object nextAfter  = hasNext ? dtos.get(dtos.size() - 1).publishDate() : null;
+
 
     // 응답 생성
-    return CursorPageResponseArticleDto.toDto(
-        content,
-        nextCursor,
-        nextAfter,
-        content.size(),
-        totalElements,
-        hasNext
-    );
+    PageResponse<ArticleDto> response = pageResponseMapper.fromSlice(slice, nextCursor, nextAfter, total);
+    log.debug("기사조회(searchArticles) 종료 → returned {} items, total={}", response.contents().size(), response.totalElements());
+    return response;
   }
 
   private OrderSpecifier<?> buildOrder(CursorPageRequestArticleDto request) {
